[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/PlayerHarmer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/poison.png" type="Texture" id=2]
[ext_resource path="res://Scripts/CobraShot.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="CobraShot" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="PlayerHarmer" parent="." instance=ExtResource( 1 )]
damage = 35
knockback = 600
radius = 12.0

[node name="CollisionShape2D" parent="PlayerHarmer" index="0"]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="PlayerHarmer"]
